# libtgaloader

./: .gitignore  Makefile.am  configure.ac
include/: tgaloader.h
src/: tgaloader.c
tests/: t_empty_error  t_empty_error.tga  t_load16  t_load16.tga  t_load24  t_load24.tga  t_load32  t_load32.tga  t_load8  t_load8.tga  t_save  t_version  ttgaloader16.c  ttgaloader24.c  ttgaloader32.c  ttgaloader8.c  ttgaloader_error.c  ttgasave.c
